Fix width overflow

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p {
 	font-size: 1.2em;
 }
 .S1 {
-	margin-top:20px;
+	margin-top: 20px;
 	background-color: #f5f5f5;
 	color: #456575;
 }
@@ -57,7 +57,6 @@ p {
 }
 .S1T {
 	padding-top: 20px;
-	padding-right: 30px;
 }
 .S2 {
 	background-color: #f5f5f5;
